# browser

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  result  vite.config.ts
.github/workflows/: release.yaml
src/: App.css  App.tsx  app.ts  index.tsx  model.ts  state.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cef.rs  lib.rs  main.rs
src-tauri/src/cef/: mod.rs  utils.rs
src/components/: Browser.css  Browser.tsx  BrowserContextMenu.module.scss  BrowserContextMenu.tsx  Icon.tsx  Icons.css  Input.css  Input.tsx  Notification.tsx  ResizablePane.module.scss  ResizablePane.tsx  SIdebar.module.scss  Tab.css  Tab.tsx  TitleBar.tsx  Titlebar.css  sidebar.tsx
src/components/browser/: Browser.tsx  BrowserContextMenu.tsx
src/components/sidebar/: Bookmarks.module.scss  Bookmarks.tsx  Downloads.module.scss  Downloads.tsx  Input.module.scss  Input.tsx  Layout.module.scss  Layout.tsx  NewTabButton.css  NewTabButton.tsx  NewTabInput.module.scss  NewTabInput.tsx  Profiles.module.scss  Profiles.tsx  Tab.css  Tab.module.css  Tab.module.scss  Tab.tsx  TabControls.module.css  TabControls.module.scss  TabControls.tsx
src/keyboard/: keycodes.ts
src/plugins/: plugin.ts
src/plugins/shortcuts/: shortcut.ts
src/state/: bookmarks.ts  config.ts  downloads.ts  profiles.ts  shortcuts.ts  state.ts  tabs.ts  ui.ts  utils.ts
src/state/plugins/: shortcut.ts
