[package]
name = "Huly Browser"
version = "0.3.4"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "huly_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
anyhow = "1"
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = "4.5.0"

[dependencies]
anyhow = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.8"
clap = { version = "4.5.45", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = "4.5.0"
tungstenite = "0.27.0"
